@@ -1,4 +1,5 @@
 version 3.42 2025-08-01
+- fixed bug in new action form: messages field always disabled when only 1 action type has messages enabled
 - changed all "insert" copy to "add"
 - fixes for $config['company_name'] with "the" prefix
 - added update legacy config_db.php to /maintenance/update data structure/
